syntax = "proto3";

message ProtoDadInt {
    string key = 1;
    int32 value = 2;
}

message ProtoLease{
    string transactionManagerName = 1;
    repeated string dadIntsKeys = 2;
}